src/css/custom.css
/* ... */
html.blog-wrapper {
	/* Blog Width */
	--ifm-container-width-xl: 100%;
}

html[data-theme="dark"] {
	--ifm-font-color-base: #bdbdbd;
	--ifm-color-content-secondary: #bdbdbd;
	--ifm-background-color: #1e1e1e;

	--ifm-color-success-contrast-foreground: #bdbdbd;
	--ifm-color-info-contrast-foreground: #bdbdbd;
	--ifm-color-warning-contrast-foreground: #bdbdbd;
	--ifm-color-secondary-contrast-foreground: #bdbdbd;

	--ifm-color-success-contrast-background: #272727;
	--ifm-color-info-contrast-background: #272727;
	--ifm-color-warning-contrast-background: #272727;
	--ifm-color-secondary-contrast-background: #272727;

	--ifm-blockquote-background-color: #272727;
	--ifm-blockquote-border-color: #353535;

	--ifm-color-info-dark: #5fa0ff;
	--ifm-color-success-dark: #36ad99;

	--site-color-feedback-background: #f0f8ff;

	/* Horizontal Line */
	--ifm-hr-background-color: #424242;

	/* Highlight line */
	--docusaurus-highlighted-code-line-bg: rgba(66, 66, 66, .35);

	/* Footer */
	--ifm-footer-background-color: var(--ifm-navbar-background-color);
}

html[data-theme='dark']	.alert {
	border-color: #272727 #272727 #272727 var(--ifm-alert-border-color);
}

.alert {
	border-color: #e1e5ef #e1e5ef #e1e5ef var(--ifm-alert-border-color);
}

.markdown {
	--ifm-h2-vertical-rhythm-top: 1.5;
}

.admonition {
	margin-bottom: 2em;
}

article h2:not(:first-of-type)::before {
	height: 1px;
	content: "";
	display: block;
	background-color: var(--ifm-color-emphasis-200);
	margin-bottom: 3rem;
}

/* Images with links */
a img.medium-zoom-image {
	/* Disable zoom */
	cursor: pointer;
	pointer-events: none;
}

/* Header Description */
header + p {
	color: var(--ifm-color-gray-600) !important;
	margin-top: -1rem !important;
}

header + p::after {
	height: 1px;
	content: " ";
	display: block;
	background-color: var(--ifm-color-emphasis-200);
	margin-top: 2rem;
}

.docusaurus-highlight-code-line {
	background-color: rgba(0, 0, 0, 0.1);
	display: block;
	margin: 0 calc(-1 * var(--ifm-pre-padding));
	padding: 0 var(--ifm-pre-padding);
}

video {
	width: 100%;
	margin-bottom: var(--ifm-leading);
	margin-left: auto;
	margin-right: auto;
	display: block;
}

/* Headers */
h1 {
	font-size: 2.25rem !important;
	font-weight: 600;
	color: var(--ifm-color-emphasis-1000);
}

h2 {
	font-size: 1.5rem !important;
}

.doc-page h2:not(header + * + h2):before {
	height: 1px;
	content: " ";
	display: block;
	background-color: var(--ifm-color-emphasis-200);
	margin-bottom: 2rem;
}

h3 {
	font-size: 1.2rem !important;
}

/* Code Blocks */
code {
	color: var(--ifm-color-emphasis-900);
}

html[data-theme='dark'] .prism-code,
html[data-theme='dark'] div[class^='codeBlockTitle'],
html[data-theme='dark'] span[class^='codeLineNumber'] {
	background-color: #222 !important;
	color: #9e9e9e !important;
}

.prism-code,
div[class^='codeBlockTitle'],
span[class^='codeLineNumber'] {
	background-color: #f6f8fa !important;
	color: #575757 !important;
	font-size: 14px;
	line-height: 1.6;
}

pre.prism-code.language-shell code span.token-line::before,
pre.prism-code.language-steamcmd code span.token-line::before {
	color: #4d7a45;
	margin-right: 1em;
	user-select: none;
}

pre.prism-code.language-steamcmd code span.token-line::before {
	content: "Steam>";
}

pre.prism-code.language-shell code span.token-line::before {
	content: "$";
}

html[data-theme='dark'] pre.prism-code.language-shell code span.token-line::before,
html[data-theme='dark'] pre.prism-code.language-steamcmd code span.token-line::before {
	color: #6a9955;
}

/* Disable Language Icon */
svg[class^='iconLanguage'] {
	display: none;
}

/* Main content */
@media screen and (min-width: 1600px) {
	/* Center page TODO: only fullscreen */
	.navbar__inner, .main-wrapper {
		width: 80%;
		margin: 0 auto;
	}

	article,
	.pagination-nav,
	.alert.alert--warning:not(.theme-admonition) {
		margin: 1rem 2rem;
	}
}

article .badge.badge--secondary {
	margin-bottom: 2rem;
}

/* Tables */
table {
	margin-bottom: 2rem;
}

.table-wrapper {
	overflow-x: auto;
}

.table-wrapper table {
	width: 100%;
	display: table;
}

article p img {
	display: block;
	margin: 0 auto;
	border-radius: 0.4rem;
}

/* Sidebar */
.menu {
	padding-top: 2rem !important;
	padding-bottom: 5rem !important;
	font-size: .875rem;
}

.tippy-box .theme-code-block {
	margin: 0;
}

details,
blockquote {
	margin-bottom: 1.5rem !important;
}


/* First items / Categories Sidebar */
.theme-doc-sidebar-item-category-level-1 >
.menu__list-item-collapsible:first-child {
	color: #888;
	font-weight: bold;
	text-transform: uppercase;
	font-size: .85rem;
	pointer-events: none;
}

.menu__link {
	user-select: none;
}

.theme-doc-sidebar-item-category-level-1 {
	margin-top: 2rem !important;
}


/* Zoom Image */
.medium-zoom-overlay {
	background: #FFFFFFEE none repeat scroll 0% 0% !important;
}

html[data-theme="dark"] .medium-zoom-overlay {
	background: #272727EE none repeat scroll 0% 0% !important;
}


/* Kofi */
.theme-back-to-top-button {
	bottom: 72px !important;
}

.floatingchat-container-wrap {
	left: unset !important;
	right: 16px !important;
}

.floating-chat-kofi-popup-iframe {
	left: unset !important;
	right: 16px !important;
}

/* Navbar */
.navbar__items .react-toggle {
	margin-left: 1rem;
}

.header-right-link:hover {
	opacity: 0.7;
}

.header-right-link:before {
	content: '';
	display: flex;
	width: 26px;
	height: 28px;
}

.header-right-link {
	padding: 0 0.4rem;
}

/* Last item resets to original padding */
.header-right-link:last-child {
	padding-right: var(--ifm-navbar-item-padding-horizontal);
}

.header-github-link:before {
	background: no-repeat center/22px url("/img/social/github-black.svg");
}

html[data-theme='dark'] .header-github-link:before {
	background: no-repeat center/22px url("/img/social/github-white.svg");
}

.header-discord-link:before {
	background: no-repeat center/26px url("/img/social/discord-color.svg");
}
/* ... */

